--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p>Quien soy...</p>
         </h2>
         <div class="contenedor">
-            <img src= "../imgs/compitiendo.jpeg">
+            <img src= "imgs/compitiendo.jpeg">
             <p>Mi nombre es Borja Costa Rojo, nací en A Coruña y al terminar la enseñanza obligatoria y hacer la selectividad,
              estudié Ingeniería informática en la Universidad de la Coruña. El primer año se me hizo tan duro que terminé
              dejándolo y ese mismo año oposité a Guardia Civil. Al sacar la oposición tuve que irme fuera, el primer año lo
