--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
         </h2>
             <!-- Se añade una imagen y se vincula con una dirección web -->
             <a href="https://www.scienceinsport.com/es/">
-                <img src="../imgs/sis.png" width="25%" >
+                <img src="imgs/sis.png" width="25%" >
             </a><br><br>
             <a href="https://nosportlimit.com/">
-                <img src="../imgs/nsl.png" width="25%" >
+                <img src="imgs/nsl.png" width="25%" >
             </a>
             
         
